Fix unreadable secondary text in dropdown-item on hover/focus (#1488)
* Fix unreadable secondary text in dropdown hover

* More widely applicable readability fix


* Fix whitespace

* Create moody-apes-study.md

--- a/src/dropdown/dropdown.scss
+++ b/src/dropdown/dropdown.scss
@@ -94,6 +94,10 @@
       color: inherit;
       opacity: 1;
     }
+
+    [class*="color-text-"] {
+      color: inherit !important;
+    }
   }
 
   &.btn-link {
